# lfd-experiments-iros2019

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/config/: allegro_torque_config.rviz  lfd_experiments.rviz  params.yaml
data/grasp/: common.yaml  manipulate.yaml  pick.yaml  pregrasp.yaml
data/grasp/dmp/: blue_pull_1.xml  blue_trans_z_1.xml  dmp_archive_updater.py  dmp_feng.xml  dmp_iros_complex_1.xml  dmp_iros_complex_2.xml  dmp_iros_complex_3.xml  dmp_iros_complex_4.xml  dmp_iros_complex_5.xml  dmp_parallel_1.xml  dmp_parallel_2.xml  dmp_parallel_3.xml  dmp_parallel_4.xml  dmp_pull_parallel.xml  dmp_pull_parallel_2.xml  dmp_pull_parallel_obj.xml  dmp_pull_rotate_1.xml  dmp_pull_short_1.xml  dmp_pull_tube.xml  dmp_pull_tube_2.xml  dmp_rot_tube_1.xml  dmp_rotate_parallel.xml  dmp_trans_z_1.xml  grasp_demo.xml  iros_exp_1.xml  iros_exp_2.xml  iros_exp_rot_1.xml  iros_exp_rot_2.xml  iros_pull.xml  iros_trans_1.xml  iros_trans_2.xml
data/model/: allegro_optoforce_right.xacro
include/lfd_experiments/: frame_state_listener.h
launch/: dump_params.launch  grasp.launch  joint_trajectory_control.launch  record.launch  spring_envelop_allegro.launch  spring_trajectory_control.launch  tactile_stop_test.launch  task_trajectory_control.launch
src/: adjust_stiffness_node.cpp  envelop_spring_node.cpp  frame_state_listener.cpp  grasp_node.cpp  joint_trajectory_server.cpp  record_demo.cpp  spring_trajectory_server.cpp  tactile_stop_node.cpp  task_trajectory_server.cpp
srv/: SpringUpdate.srv  TrajectoryRequest.srv
