<?xml version="1.0"?>
<package format="2">
  <name>lfd_experiments</name>
  <version>0.0.0</version>
  <description>Learning from demonstration experiments package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="g.solak@qmul.ac.uk">Gokhan Solak</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/lfd_experiments</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>allegro_hand_kdl</build_depend>
  <build_depend>dmp_tools</build_depend>
  <build_depend>kdl_control_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>spring_framework</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>arq_ur5</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>allegro_hand_kdl</build_export_depend>
  <build_export_depend>dmp_tools</build_export_depend>
  <build_export_depend>kdl_control_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>spring_framework</build_export_depend>
  <build_export_depend>kdl_conversions</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>arq_ur5</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>allegro_hand_kdl</exec_depend>
  <exec_depend>dmp_tools</exec_depend>
  <exec_depend>kdl_control_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>spring_framework</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>arq_ur5</exec_depend>

  <!-- Following are needed by the launch files -->
  <exec_depend>allegro_hand</exec_depend>
  <exec_depend>allegro_hand_parameters</exec_depend>
  <exec_depend>optoforce_publisher</exec_depend>

  <!-- for generating services and messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
